ogg replacement using extremely scuffed means

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -166,6 +166,9 @@
         <None Update="Files\vfx_misc.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Files\vorbis_header.bin">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="Shaders\ModelEdge_PS.fx">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
