messing around with some beta stuff

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,22 +25,22 @@ jobs:
       - name: Build
         run: |
           $ver = '${{ github.ref_name }}'
-          invoke-expression 'dotnet build --no-restore --configuration Release --nologo -p:Version=$ver -p:FileVersion=$ver -p:AssemblyVersion=$ver'
+          invoke-expression 'dotnet build --no-restore --configuration Beta --nologo -p:Version=$ver -p:FileVersion=$ver -p:AssemblyVersion=$ver'
       - name: write version into jsons
         run: |
           $ver = '${{ github.ref_name }}'
-          $path = './VFXEditor/bin/Release/VFXEditor.json'
+          $path = './VFXEditor/bin/Beta/VFXEditor-Beta.json'
           $json = Get-Content -Raw $path | ConvertFrom-Json
           $json.AssemblyVersion = $ver
           $content = $json | ConvertTo-Json
           set-content -Path $path -Value $content
       - name: Archive
-        run: Compress-Archive -Path VFXEditor/bin/Release/* -DestinationPath VFXEditor.zip
+        run: Compress-Archive -Path VFXEditor/bin/Beta/* -DestinationPath VFXEditor-Beta.zip
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.1
         with:
           path: |
-            ./VFXEditor/bin/Release/*
+            ./VFXEditor/bin/Beta/*
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -48,7 +48,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: VFXEditor ${{ github.ref }}
+          release_name: VFXEditor Beta ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -58,8 +58,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./VFXEditor.zip
-          asset_name: VFXEditor.zip
+          asset_path: ./VFXEditor-Beta.zip
+          asset_name: VFXEditor-Beta.zip
           asset_content_type: application/zip
 
       - name: Write out repo.json
@@ -69,10 +69,9 @@ jobs:
           $json = Get-Content -Raw $path | ConvertFrom-Json
           $json[0].AssemblyVersion = $ver
           $json[0].TestingAssemblyVersion = $ver
-          $json[0].DownloadLinkInstall = $json.DownloadLinkInstall -replace '[^/]+/VFXEditor.zip',"$ver/VFXEditor.zip"
-          $json[0].DownloadLinkTesting = $json.DownloadLinkTesting -replace '[^/]+/VFXEditor.zip',"$ver/VFXEditor.zip"
-          $json[0].DownloadLinkUpdate = $json.DownloadLinkUpdate -replace '[^/]+/VFXEditor.zip',"$ver/VFXEditor.zip"
-          $json[0].InternalName = "VFXEditor-Beta"
+          $json[0].DownloadLinkInstall = $json.DownloadLinkInstall -replace '[^/]+/VFXEditor-Beta.zip',"$ver/VFXEditor-Beta.zip"
+          $json[0].DownloadLinkTesting = $json.DownloadLinkTesting -replace '[^/]+/VFXEditor-Beta.zip',"$ver/VFXEditor-Beta.zip"
+          $json[0].DownloadLinkUpdate = $json.DownloadLinkUpdate -replace '[^/]+/VFXEditor-Beta.zip',"$ver/VFXEditor-Beta.zip"
           $content = $json | ConvertTo-Json -AsArray
           set-content -Path $path -Value $content
 
