--- a/VFXEditor/DalamudPackager.targets
+++ b/VFXEditor/DalamudPackager.targets
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
-    <Target Name="DeleteFile" AfterTargets="Build">
+    <Target Name="Cleanup" AfterTargets="Build">
         <Delete Files="$(TargetDir)\SharpDX.Direct2D1.dll" />
         <Delete Files="$(TargetDir)\SharpDX.Direct3D11.dll" />
         <Delete Files="$(TargetDir)\SharpDX.DXGI.dll" />
@@ -8,7 +8,16 @@
         <Delete Files="$(TargetDir)\SharpDX.dll" />
     </Target>
     
-    <Target Name="PackagePlugin" AfterTargets="DeleteFile" Condition="'$(Configuration)' == 'Release'">
+    <Target Name="PackagePlugin" AfterTargets="Cleanup" Condition="'$(Configuration)' == 'Release'">
+        <Delete Files="$(TargetDir)\VFXEditor-Beta.json" />
+        
         <DalamudPackager ProjectDir="$(ProjectDir)" OutputPath="$(OutputPath)" AssemblyName="$(AssemblyName)" MakeZip="true"/>
+    </Target>
+
+    <Target Name="PackagePluginBeta" AfterTargets="Cleanup" Condition="'$(Configuration)' == 'Beta'">
+        <Delete Files="$(TargetDir)\VFXEditor.json" />
+        <Move SourceFiles="$(TargetDir)\VFXEditor.dll" DestinationFiles="$(TargetDir)\VFXEditor-Beta.dll"/>
+        
+        <DalamudPackager ProjectDir="$(ProjectDir)" OutputPath="$(OutputPath)" AssemblyName="$(AssemblyName)-Beta" MakeZip="true"/>
     </Target>
 </Project>
