--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -16,6 +16,7 @@
         <Deterministic>true</Deterministic>
         <OutputType>Library</OutputType>
         <OutputPath>bin\$(Configuration)\</OutputPath>
+        <Configurations>Debug;Release;Beta</Configurations>
     </PropertyGroup>
     
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,6 +30,12 @@
         <DebugType>pdbonly</DebugType>
         <Optimize>true</Optimize>
         <DefineConstants>TRACE</DefineConstants>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Beta|AnyCPU'">
+      <DebugType>pdbonly</DebugType>
+      <Optimize>true</Optimize>
+      <DefineConstants>BETA;TRACE</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -194,6 +201,9 @@
         </None>
         <None Update="Shaders\ModelPreview.fx">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="VFXEditor-Beta.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="VFXEditor.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
