--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
+[submodule "OtterGui"]
+	path = OtterGui
+	url = https://github.com/Ottermandias/OtterGui.git
+	branch = main
 [submodule "Penumbra.String"]
 	path = Penumbra.String
 	url = https://github.com/Ottermandias/Penumbra.String.git
-[submodule "OtterGui"]
-	path = OtterGui
-	url = https://github.com/Ottermandias/OtterGui
+	branch = main
