--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -99,6 +99,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCnEncoder.Net" Version="2.1.0" />
         <PackageReference Include="DalamudPackager" Version="2.1.12" />
         <PackageReference Include="HelixToolkit" Version="2.24.0" />
         <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.24.0" />
