--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -101,6 +101,7 @@
     <ItemGroup>
         <PackageReference Include="BCnEncoder.Net" Version="2.1.0" />
         <PackageReference Include="DalamudPackager" Version="2.1.12" />
+        <PackageReference Include="Google.FlatBuffers" Version="24.3.25" />
         <PackageReference Include="HelixToolkit" Version="2.24.0" />
         <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.24.0" />
         <PackageReference Include="JsonPoke.MSBuild" Version="1.0.9">
