start kdb writing

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -230,5 +230,6 @@
 
     <ItemGroup>
       <Folder Include="Formats\KdbFormat\Components\" />
+      <Folder Include="Formats\KdbFormat\UnknownF\" />
     </ItemGroup>
 </Project>
