--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -100,10 +100,10 @@
 
     <ItemGroup>
         <PackageReference Include="BCnEncoder.Net" Version="2.1.0" />
-        <PackageReference Include="DalamudPackager" Version="2.1.12" />
+        <PackageReference Include="DalamudPackager" Version="2.1.13" />
         <PackageReference Include="Google.FlatBuffers" Version="24.3.25" />
-        <PackageReference Include="HelixToolkit" Version="2.24.0" />
-        <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.24.0" />
+        <PackageReference Include="HelixToolkit" Version="2.25.0" />
+        <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.25.0" />
         <PackageReference Include="JsonPoke.MSBuild" Version="1.0.9">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -113,9 +113,9 @@
         <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
         <PackageReference Include="NAudio.Wasapi" Version="2.2.1" />
         <PackageReference Include="NAudio.WinMM" Version="2.2.1" />
-        <PackageReference Include="Penumbra.Api" Version="5.0.0" />
+        <PackageReference Include="Penumbra.Api" Version="5.1.0" />
         <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
-        <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0031" />
+        <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0" />
         <PackageReference Include="TeximpNet" Version="1.4.3" />
     </ItemGroup>
 
