--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -6,8 +6,8 @@
         <Company></Company>
         <Product>VFXEditor</Product>
         <Copyright>Copyright © 2020</Copyright>
-        <FileVersion>1.9.2.2</FileVersion>
-        <AssemblyVersion>1.9.2.2</AssemblyVersion>
+        <FileVersion>1.9.2.3</FileVersion>
+        <AssemblyVersion>1.9.2.3</AssemblyVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -48,117 +48,117 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="Files\adpcmencode3.exe">
+        <Content Include="Files\adpcmencode3.exe">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\bnpc.json">
+        </Content>
+        <Content Include="Files\bnpc.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_racial">
+        </Content>
+        <Content Include="Files\common_racial">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_shcd">
+        </Content>
+        <Content Include="Files\common_shcd">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_shpk">
+        </Content>
+        <Content Include="Files\common_shpk">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_tmb">
+        </Content>
+        <Content Include="Files\common_tmb">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_uld">
+        </Content>
+        <Content Include="Files\common_uld">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\common_vfx">
+        </Content>
+        <Content Include="Files\common_vfx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\d3d\fxc.exe">
+        </Content>
+        <Content Include="Files\d3d\fxc.exe">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_binder.vfxedit">
+        </Content>
+        <Content Include="Files\default_binder.vfxedit">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_model.vfxedit2">
+        </Content>
+        <Content Include="Files\default_model.vfxedit2">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_pap_tmb.tmb">
+        </Content>
+        <Content Include="Files\default_pap_tmb.tmb">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_scd_audio.scd">
+        </Content>
+        <Content Include="Files\default_scd_audio.scd">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_texture.vfxedit2">
+        </Content>
+        <Content Include="Files\default_texture.vfxedit2">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_vfx.avfx">
+        </Content>
+        <Content Include="Files\default_vfx.avfx">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_weapon.avfx">
+        </Content>
+        <Content Include="Files\default_weapon.avfx">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_effector.vfxedit">
+        </Content>
+        <Content Include="Files\default_effector.vfxedit">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_emitter.vfxedit">
+        </Content>
+        <Content Include="Files\default_emitter.vfxedit">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\npc_files.json">
+        </Content>
+        <Content Include="Files\npc_files.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_particle.vfxedit">
+        </Content>
+        <Content Include="Files\default_particle.vfxedit">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\default_timeline.vfxedit">
+        </Content>
+        <Content Include="Files\default_timeline.vfxedit">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\oggenc2.exe">
+        </Content>
+        <Content Include="Files\oggenc2.exe">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\sphere_d_array.tex">
+        </Content>
+        <Content Include="Files\sphere_d_array.tex">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\tile_norm_array.tex">
+        </Content>
+        <Content Include="Files\tile_norm_array.tex">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\tile_orb_array.tex">
+        </Content>
+        <Content Include="Files\tile_orb_array.tex">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\useful_textures.txt">
+        </Content>
+        <Content Include="Files\useful_textures.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Files\vorbis_header.bin">
+        </Content>
+        <Content Include="Files\vorbis_header.bin">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\Cube.fx">
+        </Content>
+        <Content Include="Shaders\Cube.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\Emitter.fx">
+        </Content>
+        <Content Include="Shaders\Emitter.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\Gradient.fx">
+        </Content>
+        <Content Include="Shaders\Gradient.fx">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\MeshGBuffer.fx">
+        </Content>
+        <Content Include="Shaders\MeshGBuffer.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\SsaoQuad.fx">
+        </Content>
+        <Content Include="Shaders\SsaoQuad.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\MaterialLegacyGBuffer.fx">
+        </Content>
+        <Content Include="Shaders\MaterialLegacyGBuffer.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\PhongUtils.fx">
+        </Content>
+        <Content Include="Shaders\PhongUtils.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\ModelUtils.fx">
+        </Content>
+        <Content Include="Shaders\ModelUtils.fx">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Shaders\Model.fx">
+        </Content>
+        <Content Include="Shaders\Model.fx">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-        <None Update="VFXEditor.json">
+        </Content>
+        <Content Include="VFXEditor.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
