--- a/VFXEditor/DalamudPackager.targets
+++ b/VFXEditor/DalamudPackager.targets
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
     <Target Name="Cleanup" AfterTargets="Build">
-        <Delete Files="$(TargetDir)\SharpDX.Direct2D1.dll"/>
+        <!--Delete Files="$(TargetDir)\SharpDX.Direct2D1.dll"/>
         <Delete Files="$(TargetDir)\SharpDX.Direct3D11.dll"/>
         <Delete Files="$(TargetDir)\SharpDX.DXGI.dll"/>
         <Delete Files="$(TargetDir)\SharpDX.Mathematics.dll"/>
-        <Delete Files="$(TargetDir)\SharpDX.dll"/>
+        <Delete Files="$(TargetDir)\SharpDX.dll"/-->
     </Target>
     
     <Target Name="PackagePlugin" AfterTargets="Cleanup" Condition="'$(Configuration)' == 'Release'">
