--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -24,6 +24,8 @@
     <ItemGroup>
         <PackageReference Include="BCnEncoder.Net" Version="2.2.1" />
         <PackageReference Include="Google.FlatBuffers" Version="25.2.10" />
+        <PackageReference Include="FlatSharp.Runtime" Version="7.9" />
+        <PackageReference Include="FlatSharp.Compiler" Version="7.9" />
         <PackageReference Include="HelixToolkit" Version="3.1.2" />
         <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.27.3" />
         <PackageReference Include="JsonPoke.MSBuild" Version="1.0.9">
@@ -42,7 +44,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Penumbra.String\Penumbra.String.csproj" />
+        <ProjectReference Include="..\Penumbra.String\Penumbra.String.csproj" />
+        <None Include="flatbuffer\schemas\epbd_schema.fbs" />
+        <None Include="flatbuffer\schemas\ephb_schema.fbs" />
         <None Include="lib\DirectXTexC.dll">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <TargetPath>DirectXTexC.dll</TargetPath>
@@ -171,7 +175,13 @@
 
     <ItemGroup>
       <Folder Include="Flatbuffer\Ephb\" />
+      <Folder Include="Flatbuffer\Schemas\" />
       <Folder Include="lib\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <FlatSharpSchema Include="Flatbuffer\Schemas\epbd_schema.fbs" />
+        <FlatSharpSchema Include="Flatbuffer\Schemas\ephb_schema.fbs" />
     </ItemGroup>
 
     <ItemGroup>
