--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -27,7 +27,8 @@
         <PackageReference Include="FlatSharp.Runtime" Version="7.9" />
         <PackageReference Include="FlatSharp.Compiler" Version="7.9" />
         <PackageReference Include="HelixToolkit" Version="3.1.2" />
-        <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.27.3" />
+        <PackageReference Include="HelixToolkit.Maths" Version="3.1.2" />
+        <PackageReference Include="HelixToolkit.SharpDX" Version="3.1.2" />
         <PackageReference Include="JsonPoke.MSBuild" Version="1.0.9">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
