--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -15,6 +15,7 @@
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <Configurations>Debug;Release;Beta</Configurations>
         <RootNamespace>VfxEditor</RootNamespace>
+        <NoWarn>CS8625; CS8603; CS8601; CS8604; CS8629; CS8618; CS8602; CS8600; CS8619</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
